--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,6 @@
     "require": {
         "php": "^8.4",
         "inertiajs/inertia-laravel": "^2.0",
-        "knuckleswtf/scribe": "^5.6",
         "laravel/fortify": "^1.33",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
@@ -26,7 +25,8 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^4.2",
-        "pestphp/pest-plugin-laravel": "^4.0"
+        "pestphp/pest-plugin-laravel": "^4.0",
+        "knuckleswtf/scribe": "^5.6"
     },
     "autoload": {
         "psr-4": {
