--- a/.env.test.example
+++ b/.env.test.example
@@ -1,8 +1,8 @@
 APP_NAME=Calendar
-APP_ENV=production
-APP_KEY=
-APP_DEBUG=false
-APP_URL=http://localhost
+APP_ENV=testing
+APP_KEY=base64:/Edh6gS5JWKI0rxPDod7HJV57Tl6okHxfkfcxNBlA30=
+APP_DEBUG=true
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -10,7 +10,7 @@ APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
 
-BCRYPT_ROUNDS=12
+BCRYPT_ROUNDS=4
 
 LOG_CHANNEL=stack
 LOG_STACK=single
@@ -18,28 +18,28 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=calendar
+DB_DATABASE=testing
 DB_USERNAME=root
 DB_PASSWORD=secret
 DB_ROOT_PASSWORD=secret
 
-SESSION_DRIVER=redis
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
+BROADCAST_CONNECTION=null
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=redis
+QUEUE_CONNECTION=sync
 
-CACHE_STORE=redis
+CACHE_STORE=file
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=redis
-REDIS_PASSWORD=secret
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=log
@@ -51,12 +51,8 @@ MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-MYSQL_EXT_PORT=3306
-NGINX_EXT_PORT=80
-NODE_EXT_PORT=5173
-
 HTTP_BASIC_AUTH_USER=root
 HTTP_BASIC_AUTH_PASSWORD=root
 
-VITE_APP_URL=http://localhost
+VITE_APP_URL=http://localhost:8000
 VITE_APP_NAME="${APP_NAME}"
