--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "format": "prettier --write resources/",
         "format:check": "prettier --check resources/",
         "lint": "eslint . --fix",
-        "test": "vitest"
+        "test": "vitest",
+        "test:ci": "vitest run"
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
